   * new [store_turns] tag to store the number of turns remaining
   * all [store_*] tags get a default variable name
   * use complex variable substitution almost everywhere
   * new key for [set_variable], literal=, to avoid variable substitution
   * [effect] can now toggle the zoc
   * [effect] can now apply new portrait images and unit type descriptions
   * new key for [variable], boolean_equals=, to test boolean equality
   * remove some old backward compatibility support
   * set_name in attack modification [effect] no longer change the weapon's
     description, use the new set_description instead
   * hit=yes in anim is now an alias of hit=hit,kill instead of hit=hit
     this should fix the sliding bug and fix more bugs than it creates
   * friendlier boolean matching for unit [filter] and unit [wml_filter]
   * fixed [special_filter] not working properly (#8212)
   * fixed [variables] not working properly for Multiplayer mode
   * new [set_menu_item] action, to allow custom WML items in the context menu
   * fixed a crash when a WML event killed a unit while dying in an attack
     which the attack engine didn't expect (bug #8814)
   * new key for [time], sound=, to specify a list of sounds that can play
     when ToD changes
   * more powerful [filter_location], now accepts radius=, [not], and 
     [filter] to match units at the location
   * added [deprecated_message] so WML can also trigger the deprecated 
     messages; used to tag macros scheduled for removal
 * user interface:
   * new sounds for user interface events
   * added the option to show warnings about deprecated WML usage
   * added the "ignore all" option to continue observing during massive OOS
   * show total amount of visible villages (patch #698)
   * added drag & drop to move units
   * mousewheel now by default scrolls vertically, and horizontally if alt is
      pressed.
   * added support for horizontal mousewheel (patch #644)
 * WML tools and scripts: