@@ -55,6 +55,9 @@ private:
 	bool global_traits_;
 };
 
+unit_race::GENDER string_gender(const std::string& str,unit_race::GENDER def=unit_race::MALE);
+std::string const& gender_string(unit_race::GENDER gender);
+
 typedef std::map<std::string,unit_race> race_map;
 
 #endif
