@@ -77,6 +77,7 @@ Version 1.3.1+svn:
    * new key for [set_variable], literal=, to avoid variable substitution
    * [effect] can now toggle the zoc
    * [effect] can now apply new portrait images and unit type descriptions
+   * [effect] can now filter on unit_gender
    * new key for [variable], boolean_equals=, to test boolean equality
    * remove some old backward compatibility support
    * set_name in attack modification [effect] no longer change the weapon's
